# rusciii

./: '  .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js  todo.txt
data/: defaultRamp.json  fonts.json
src/: app.rs  asciiGenerator.rs  components.rs  imageHandler.rs  main.rs  sections.rs  utils.rs
src/components/: select.rs  slider.rs  toggle.rs  upload.rs
src/sections/: artpanel.rs  sidebar.rs
style/: tailwind.css
